--- a/src/app/blog/page.module.css
+++ b/src/app/blog/page.module.css
@@ -1,1 +1,19 @@
-.container {}
+.container {
+    display: flex;
+    align-items: center;
+    gap: 50PX;
+    margin-bottom: 50px;
+}
+
+.image {
+    object-fit: cover;
+}
+
+.title {
+    margin-bottom: 10px;
+}
+
+.desc {
+    font-size: 18px;
+    color: #999;
+}
